--- a/css/styles.css
+++ b/css/styles.css
@@ -11287,6 +11287,6 @@ textarea.form-control-lg {
   }
 }
 body {
-  background: url("https://github.com/Olithinivia/olithinivia.github.io/blob/main/UW.jpg") no-repeat center center fixed;
+  background: url("UW.jpg") no-repeat center center fixed;
   background-size: cover;
 }
